e2e: Refactored yake2e/yakity
This patch refactors the word "yake2e" into "sk8e2e" and variations of
"yakity" into the sk8 equivalents. The refactor is specific to the e2e
sub-directory.

--- a/e2e/Dockerfile.job
+++ b/e2e/Dockerfile.job
@@ -1,6 +1,7 @@
 #
 # This image is meant to be scheduled as a pod or job on Kubernetes
-# clusters turned up with the tool https://github.com/akutz/yake2e.
+# clusters turned up with the tool
+# https://github.com/vmware/simple-k8s-test-env/tree/master/e2e.
 #
 # This image will only work if:
 #   1. The "kubectl" binary is available at "/usr/local/bin/kubectl"
