e2e: Tag e2e image the same as K8s images
This patch updates the e2e image tag to follow the format of the K8s
test-infra images.

--- a/e2e/Makefile
+++ b/e2e/Makefile
@@ -1,6 +1,7 @@
 all: build
 
-IMAGE := gcr.io/kubernetes-conformance-testing/sk8e2e:latest
+IMAGE := gcr.io/kubernetes-conformance-testing/sk8e2e
+TAG ?= $(shell date +v%Y%m%d)-$(shell git describe --tags --always --dirty)
 KEEPALIVE := hack/keepalive/keepalive.linux_amd64
 
 $(KEEPALIVE):
@@ -8,9 +9,11 @@ $(KEEPALIVE):
 
 build: image
 image: $(KEEPALIVE)
-	docker build -t $(IMAGE) .
+	docker build -t "$(IMAGE):$(TAG)" .
+	docker tag "$(IMAGE):$(TAG)" "$(IMAGE):latest"
 
 push: image
-	docker push $(IMAGE)
+	docker push "$(IMAGE):$(TAG)"
+	docker push "$(IMAGE):latest"
 
 .PHONY: build image push
