e2e: Download TF plug-ins when building image
This patch updates the e2e image with the TF plug-ins so invoking the
image doesn't block on downloading the plug-ins.

--- a/e2e/Dockerfile
+++ b/e2e/Dockerfile
@@ -63,6 +63,9 @@ WORKDIR /tf
 # Update the PATH to include the Google Cloud SDK.
 ENV PATH=/google-cloud-sdk/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 
+# Download the Terraform plug-ins.
+RUN ./entrypoint.sh null plugins
+
 # The default argument for the entrypoint will drop the user into a shell.
 CMD [ "bash" ]
 ENTRYPOINT [ "/tf/entrypoint.sh" ]
